--- a/src/components/Map/Map.css
+++ b/src/components/Map/Map.css
@@ -34,3 +34,58 @@ a.mapboxgl-ctrl-logo {
   width: 0;
   height: 0;
 }
+h3{
+  text-align: center;
+  font-weight: bold;
+  font-size: 1.3em;
+}
+.quest{
+  text-align: center;
+}
+.acpt{
+  width: 50%;
+  height: auto;
+}
+.center-ob{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.acpt {
+  text-align: center;
+  font-size: 1.2em;
+  margin-top: 2%;
+  display: inline-block;
+  outline: 0;
+  border: 0;
+  cursor: pointer;
+  will-change: box-shadow,transform;
+  background: radial-gradient( 100% 100% at 100% 0%, #7BB969 0%, #4A9764 100% );
+  box-shadow: 0px 0.01em 0.01em rgb(45 35 66 / 40%), 0px 0.3em 0.7em -0.01em rgb(45 35 66 / 30%), inset 0px -0.01em 0px rgb(58 65 111 / 50%);
+  border-radius: 0.3em;
+  color: #fff;
+  height: 2em;
+  text-shadow: 0 1px 0 rgb(0 0 0 / 40%);
+  transition: box-shadow 0.15s ease, transform 0.15s ease;
+}
+
+.acpt:hover {
+  box-shadow: 0px 0.1em 0.2em rgb(45 35 66 / 40%), 0px 0.4em 0.7em -0.1em rgb(45 35 66 / 30%), inset 0px -0.1em 0px #3c4fe0;
+  transform: translateY(-0.1em);
+}
+
+.acpt:active {
+  box-shadow: inset 0px 0.1em 0.6em #3c4fe0;
+  transform: translateY(0em);
+}
+.mapboxgl-popup-close-button{
+  font-size: 2em;
+}
+.mapboxgl-popup-content{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+.mapboxgl-popup-content>img{
+  height:18em;
+}
