--- a/src/components/Map/Map.css
+++ b/src/components/Map/Map.css
@@ -6,6 +6,20 @@
   position: absolute;
   @apply md:left-[400px] md:bottom-0 top-0 left-0 right-0 bottom-[18rem];
 }
+.markerEvent {
+  background-image: url('https://docs.mapbox.com/mapbox-gl-js/assets/custom_marker.png');
+  background-size: cover;
+  width: 50px;
+  height: 50px;
+  cursor: pointer;
+}
+.markerParty {
+  background-image: url('https://img.icons8.com/color/512/filled-star.png');
+  background-size: cover;
+  width: 50px;
+  height: 50px;
+  cursor: pointer;
+}
 
 .sidebarStyle {
   display: inline-block;
@@ -33,4 +47,12 @@ a.mapboxgl-ctrl-logo {
 .mapboxgl-ctrl-group button {
   width: 0;
   height: 0;
+}
+.mapboxgl-popup {
+  max-width: 200px;
+}
+
+.mapboxgl-popup-content {
+  text-align: center;
+  font-family: 'Open Sans', sans-serif;
 }
