--- a/src/components/Map/Map.css
+++ b/src/components/Map/Map.css
@@ -7,17 +7,17 @@
   @apply md:left-[400px] md:bottom-0 top-0 left-0 right-0 bottom-[18rem];
 }
 .markerEvent {
-  background-image: url('https://docs.mapbox.com/mapbox-gl-js/assets/custom_marker.png');
+  background-image: url('../../../public/pin.png');
   background-size: cover;
-  width: 50px;
-  height: 50px;
+  width: 3.5rem;
+  height: 3.5rem;
   cursor: pointer;
 }
 .markerParty {
   background-image: url('https://img.icons8.com/color/512/filled-star.png');
   background-size: cover;
-  width: 50px;
-  height: 50px;
+  width: 3.5rem;
+  height: 3.5rem;
   cursor: pointer;
 }
 
@@ -108,4 +108,7 @@ h2{
   color:#FFBE46;
   text-align: center;
   font-size: 1.2em;
+}
+p{
+  text-align: center;
 }
