--- a/src/components/Map/Map.css
+++ b/src/components/Map/Map.css
@@ -2,6 +2,9 @@
 @tailwind components;
 @tailwind utilities;
 
+.hiddenEl{
+  display: none;
+}
 .map-container {
   position: absolute;
   @apply md:left-[22rem] md:bottom-0 top-0 left-0 right-0 bottom-[30vh];
