--- a/src/components/Map/Map.css
+++ b/src/components/Map/Map.css
@@ -49,15 +49,15 @@ a.mapboxgl-ctrl-logo {
 .mapboxgl-ctrl.mapboxgl-ctrl-attrib {
   visibility: hidden;
 }
-.mapboxgl-popup-content {
+.nomapboxgl-popup-content {
   color: white;
   background-color: #7209b7;
 }
-.mapboxgl-ctrl-group button {
+.nomapboxgl-ctrl-group button {
   width: 0;
   height: 0;
 }
-h3{
+.noh3{
   text-align: center;
   font-weight: bold;
   font-size: 1.3em;
@@ -102,14 +102,13 @@ h3{
   transform: translateY(0em);
 }
 .mapboxgl-popup-close-button{
-  font-size: 2em;
+  font-size: 0;
 }
 .mapboxgl-popup-content{
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
+  padding: 0!important;
+  background-color: transparent!important;
 }
-.mapboxgl-popup-content>img{
+.nomapboxgl-popup-content>img{
   margin-top: 1em;
   height: 14em;
   width: auto;
