--- a/src/components/Map/Map.css
+++ b/src/components/Map/Map.css
@@ -53,7 +53,7 @@ a.mapboxgl-ctrl-logo {
   color: white;
   background-color: #7209b7;
 }
-.nomapboxgl-ctrl-group button {
+.mapboxgl-ctrl-group button {
   width: 0;
   height: 0;
 }
