--- a/src/components/Map/Map.css
+++ b/src/components/Map/Map.css
@@ -24,7 +24,7 @@
   cursor: pointer;
 }
 .markerSport{
-  background-image: url('../../../public/sport.svg');
+  background-image: url('../../../public/chop.svg');
   background-size: cover;
   width: 3rem;
   height: 3rem;
